Bug 329857 - akonadi imap fails if Internet is not ready
Summary: akonadi imap fails if Internet is not ready
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: 1.11.80
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Christian Mollekopf
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-11 19:24 UTC by Txutxifel
Modified: 2014-03-25 09:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Txutxifel 2014-01-11 19:24:03 UTC
Sometime, When I start my computer, I have Ethernet o Wlan conection, but the the Internet is not ready:
-My home router is starting.
-I have to accept a cooky in my job

In both cases, Akonadi Imap is disconnected when Internet is ready

Reproducible: Always

Steps to Reproduce:
1. Start the computer
2. Wait o configure the Internet conection
3. Akonadi Imap doesnt start


Expected Results:  
Akonadi Imap sync automatically
Comment 1 Txutxifel 2014-03-10 14:38:27 UTC
Hi
Still in KDE 4.13 Beta 1 (opensuse 64 bits)

Is there any progress? Is it necessary any log, information?

Thanks
Comment 2 Christian Mollekopf 2014-03-23 15:52:42 UTC
I just wanted to look into that, till are you already working on it?
Comment 3 Txutxifel 2014-03-23 17:50:50 UTC
I can only say it still happen, imap is showed as disconnected, but i think akonadi google is affected. too.  it starts as connected, but it is never updated.
Thanks
Comment 4 Christian Mollekopf 2014-03-23 19:21:11 UTC
(In reply to comment #3)
> I can only say it still happen, imap is showed as disconnected, but i think
> akonadi google is affected. too.  it starts as connected, but it is never
> updated.
> Thanks

Jup, I can reproduce it and have a patch ready. It's just waiting to be reviewed. It should make it into 4.13 hopefully. Thanks for reporting.
Comment 5 Txutxifel 2014-03-24 07:31:58 UTC
Thanks for fixing it. It was very annoying!!!
Comment 6 Christian Mollekopf 2014-03-25 07:57:18 UTC
Git commit 5d128773819d50278a194d6a16d5fa36c7e81908 by Christian Mollekopf.
Committed on 23/03/2014 at 19:00.
Pushed by cmollekopf into branch 'KDE/4.13'.

Avoid setting the Agent online if it needs network but there is none.

Without this patch an agent is online initially and only reacts to subsequent,
online status changes. This cause for example the imap resource to go online
when started without network connection (resulting in a wrong initial status),
and as the imap resource tried to connect and failed, it set itself to offline,
resulting in it not reacting to the network becoming available.

With this patch all network detection code can be removed from the imap resource
and it properly reacts to network changes.
REVIEW: 117008

M  +9    -1    akonadi/agentbase.cpp

http://commits.kde.org/kdepimlibs/5d128773819d50278a194d6a16d5fa36c7e81908
Comment 7 Christian Mollekopf 2014-03-25 09:08:57 UTC
Git commit e49c200ba4387a31e997fe24a4a86c8bb8045abc by Christian Mollekopf.
Committed on 23/03/2014 at 17:38.
Pushed by cmollekopf into branch 'KDE/4.13'.

IMAP-Resource: Removed network-change handling

With the fixed AgentBase we no longer need to handle network changes.
This results in the imap resource correctly reacting to network changes.

M  +1    -13   resources/imap/imapresource.cpp

http://commits.kde.org/kdepim-runtime/e49c200ba4387a31e997fe24a4a86c8bb8045abc