IMAP-Resource: Removed network-change handling

With the fixed AgentBase we no longer need to handle network changes.
This results in the imap resource correctly reacting to network changes.

BUG: 329857